--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -24,7 +24,7 @@
                     {% csrf_token %}
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="Username" name="username" >
-                        <input type="password" class="form-control" placeholder="Username" name="psw" >
+                        <input type="password" class="form-control" placeholder="Password" name="psw" >
                         <button class="btn btn-primary" type="submit">Login</button>
                         <a class="btn btn-link" href="{% url 'onlinecourse:registration' %}">Sign Up</a>
                     </div>
@@ -34,22 +34,50 @@
         </ul>
     </div>
 </nav>
-
-<div class="container-fluid">
-    {% if grade > 80 %}
-    <div class="alert alert-success">
-       <!--HINT Display passed info -->
-    </div>
+    {% if user.is_authenticated %}
+    <div class="container-fluid">
+        {% if grade > 80 %}
+        <div class="alert alert-success">
+        <b>Congratulations, {{ user.first_name }}!</b> You have passed the exam and completed the course with score {{ grade }}/100
+        </div>
         {% else %}
         <div class="alert alert-danger">
-            <!--HINT Display failed info -->
+        <b>Failed.</b> Sorry, {{ user.first_name }}! You have failed exam with score {{ grade }}/100
         </div>
         <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
         {% endif %}
         <div class="card-columns-vertical mt-1">
         <h5 class="">Exam results</h5>
-            <!--HINT Display exam results-->
+            <div class="card-columns-vertical">
+            {% for lesson in course.lesson_set.all %}
+                {% for question in lesson.question_set.all %}
+                <div class="card mt-1">
+                    <div class="card-header"><h5>{{ question.question_text }}</h5></div>
+                    <div class="card-body">
+                        {% for xchoice in question.choice_set.all %}
+                            {% if xchoice in choices %}
+                                {% if xchoice.is_correct %}
+                                <div class="text-success"> Correct answer:&nbsp;
+                                {% else %}
+                                <div class="text-danger"> Incorrect answer:&nbsp;
+                                {% endif %}
+                            {% else %}
+                                {% if xchoice.is_correct %}
+                                <div class="text-warning"> Not selected:&nbsp;
+                                {% else %}
+                                <div class="text-body">
+                                {% endif %}
+                            {% endif %}
+                            {{ xchoice.choice_text }}
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
+                {% endfor %}
+            {% endfor %}
+            </div>
         </div>
     </div>
+    {% endif %}
 </body>
 </html>
